# burplist-frontend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  app.py  docker-entrypoint.sh  pyproject.toml  renovate.json  requirements.txt  tornado_app.py
.github/: renovate.json
.github/workflows/: ci.yml  deployment.yml  release.yml  test.yml
docker/: Dockerfile
src/: feedback.py  index.py  models.py  privacy.py  settings.py  terms.py
src/contents/: graph.py  index.py  scripts.py
src/database/: models.py  utils.py
src/handlers/: __init__.py  feedback.py  index.py  privacy.py  terms.py
src/pages/: feedback.py  index.py  privacy.py  terms.py
src/templates/: 404.html
src/utils/: __init__.py  constants.py  content.py  models.py  search.py  validators.py
src/utils/contents/: charts.py  index.py
static/: robots.txt
