[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "A frontend repository for the Burplist project."
name = "src"
version = "1.1.7"

[tool.poetry.dependencies]
SQLAlchemy = "==1.4.39"
cachetools = "==5.2.0"
environs = "==9.5.0"
psycopg2-binary = "2.9.3"
pyecharts = "1.9.1"
python = "^3.9"
pytz = "^2021.1"
pywebio = "==1.6.2"
sentry-sdk = "==1.7.2"

[tool.poetry.dev-dependencies]
autopep8 = "==1.6.0"
flake8 = "==4.0.1"
pre-commit = "==2.20.0"
pylint = "==2.14.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
branch = "production"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "src/__init__.py:__version__",
  "pyproject.toml:version",
]
