[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "A frontend repository for the Burplist project."
name = "src"
version = "1.1.35"

[tool.poetry.dependencies]
SQLAlchemy = "==1.4.47"
cachetools = "==5.3.0"
environs = "==9.5.0"
psycopg2-binary = "==2.9.6"
pyecharts = "1.9.1"
python = "^3.9"
pytz = "==2022.7.1"
pywebio = "1.8.1"
sentry-sdk = "==1.19.1"

[tool.poetry.dev-dependencies]
autopep8 = "==2.0.2"
flake8 = "==6.0.0"
pre-commit = "==2.21.0"
pylint = "==2.17.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "src/__init__.py:__version__",
  "pyproject.toml:version",
]
